tests/data/partialapp/negative/No warning for left piped3 args.fs
module M

let myFunc a b c d = a + b + c + d

myFunc 10 <||| (20, 30, 40)
